# ad_NDK

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ad_ndk/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/adndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/ad_ndk/: MainActivity.java
app/src/main/java/com/example/adndk/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ad_ndk/: ExampleUnitTest.java
app/src/test/java/com/example/adndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
